added a new function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="text" id="disp" class=" text-end fw-bold  fs-2 px-3 py-1 mt-2 bg-white">
        <button class="mybtn" >(</button>
        <button class="mybtn">)</button>
-       <button class="mybtn" onclick="deleteNum()">C</button>
+       <button class="mybtn" onclick="clearNum()">C</button>
        <button class="mybtn" onclick="deleteNum()">del</button>
        <button class="mybtn" onclick="myDigit(7)">7</button>
        <button class="mybtn" onclick="myDigit(8)">8</button>
